applications/seldon-core/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: seldon-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 15101
      name: http
      protocol: HTTP
    hosts:
    - "*"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: seldon-vs
#  namespace: seldon-test
#spec:
#  hosts:
#  - "*"
#  gateways:
#  - seldon-gateway
#  http:
#  - match:
#    - port: 15101
#    route:
#    - destination:
#        host: seldon
#        port:
#          number: 8000
#
