applications/seldon-core/istiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 15101
      name: http-seldon
      protocol: HTTP
    hosts:
    - "*"
